force-app/main/default/objects/Clarity_Form_Connection_Field__c/fields/Clarity_Form_Connection__c.field-meta.xml
<CustomField>
    <fullName>forms__Form_Connection__c</fullName>
    <label>Clarity Form Connection</label>
    <referenceTo>forms__Form_Connection__c</referenceTo>
    <relationshipLabel>Clarity Form Connection Fields</relationshipLabel>
    <relationshipName>forms__Form_Connection_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>