force-app/main/default/objects/Clarity_Form_Connection_Field__c/fields/Clarity_Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Question</label>
    <referenceTo>Clarity_Form_Question__c</referenceTo>
    <relationshipLabel>Clarity Form Connection Fields</relationshipLabel>
    <relationshipName>Clarity_Form_Connection_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>