force-app/main/default/objects/Clarity_Form_Connection_Field__c/fields/Custom_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Value__c</fullName>
    <label>Custom Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>